--- a/src/assets/css/sb-admin-2.css
+++ b/src/assets/css/sb-admin-2.css
@@ -214,6 +214,10 @@ body {
     margin-top: 25%;
 }
 
+.login-panel .form-group:last-child {
+    margin-bottom: 0;
+}
+
 .flot-chart {
     display: block;
     height: 400px;
